Weekly OpenApiDocs Download.

--- a/openApiDocs/beta/BusinessScenario.yml
+++ b/openApiDocs/beta/BusinessScenario.yml
@@ -2030,6 +2030,13 @@ components:
               description: Read-only. The date on which task is added to or removed from MyDay.
               format: date
               nullable: true
+            lastModifiedBy:
+              $ref: '#/components/schemas/microsoft.graph.identitySet'
+            lastModifiedDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
             orderHint:
               type: string
               description: 'The hint used to order items of this type in a list view. For more information, see Using order hints in plannern.'
