--- a/openApiDocs/beta/DeviceManagement.Functions.yml
+++ b/openApiDocs/beta/DeviceManagement.Functions.yml
@@ -2014,6 +2014,7 @@ paths:
       tags:
         - deviceManagement.Functions
       summary: Invoke function summarizeDeviceRemoteConnection
+      description: 'The report will be retired on December 31, 2024. You can start using the Cloud PC connection quality report now via https://go.microsoft.com/fwlink/?linkid=2283835.'
       operationId: deviceManagement.userExperienceAnalyticsRemoteConnection_summarizeDeviceRemoteConnection
       parameters:
         - name: summarizeBy
@@ -2419,6 +2420,80 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: function
+  '/deviceManagement/virtualEndpoint/cloudPCs/{cloudPC-id}/microsoft.graph.retrieveSnapshots()':
+    get:
+      tags:
+        - deviceManagement.Functions
+      summary: Invoke function retrieveSnapshots
+      operationId: deviceManagement.virtualEndpoint.cloudPC_retrieveSnapshot
+      parameters:
+        - name: cloudPC-id
+          in: path
+          description: The unique identifier of cloudPC
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: cloudPC
+        - $ref: '#/components/parameters/top'
+        - $ref: '#/components/parameters/skip'
+        - $ref: '#/components/parameters/search'
+        - $ref: '#/components/parameters/filter'
+        - $ref: '#/components/parameters/count'
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+        - name: $orderby
+          in: query
+          description: Order items by property values
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              type: string
+      responses:
+        2XX:
+          description: Success
+          content:
+            application/json:
+              schema:
+                title: Collection of cloudPcSnapshot
+                type: object
+                properties:
+                  value:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/microsoft.graph.cloudPcSnapshot'
+                  '@odata.nextLink':
+                    type: string
+                    nullable: true
+                additionalProperties:
+                  type: object
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: function
+      x-ms-pageable:
+        nextLinkName: '@odata.nextLink'
+        operationName: listMore
   '/deviceManagement/virtualEndpoint/cloudPCs/microsoft.graph.getProvisionedCloudPCs(groupId=''{groupId}'',servicePlanId=''{servicePlanId}'')':
     get:
       tags:
@@ -4003,7 +4078,7 @@ components:
               nullable: true
           additionalProperties:
             type: object
-          description: The user experience analyte remote connection entity.
+          description: 'The user experience analytics remote connection entity. The report will be retired on December 31, 2024. You can start using the Cloud PC connection quality report now via https://go.microsoft.com/fwlink/?linkid=2283835.'
     microsoft.graph.userExperienceAnalyticsResourcePerformance:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -4163,6 +4238,39 @@ components:
           $ref: '#/components/schemas/microsoft.graph.cloudPcRemoteActionName'
       additionalProperties:
         type: object
+    microsoft.graph.cloudPcSnapshot:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: cloudPcSnapshot
+          type: object
+          properties:
+            cloudPcId:
+              type: string
+              description: The unique identifier for the Cloud PC.
+            createdDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'The date and time at which the snapshot was taken. The timestamp is shown in ISO 8601 format and Coordinated Universal Time (UTC). For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
+            expirationDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'The date and time when the snapshot expires. The time is shown in ISO 8601 format and Coordinated Universal Time (UTC) time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
+            lastRestoredDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'The date and time at which the snapshot was last used to restore the Cloud PC device. The timestamp is shown in ISO 8601 format and Coordinated Universal Time (UTC). For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
+            snapshotType:
+              $ref: '#/components/schemas/microsoft.graph.cloudPcSnapshotType'
+            status:
+              $ref: '#/components/schemas/microsoft.graph.cloudPcSnapshotStatus'
+          additionalProperties:
+            type: object
     microsoft.graph.cloudPC:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -4423,7 +4531,7 @@ components:
             description: Indicates the devices whose property value is greater than the configured input in Assignment Filters.
             name: greaterThan
           - value: greaterThanOrEquals
-            description: Indicates the devices whose property value is greater than or equal to the configured input in Assignment Filters.
+            description: '`Indicates the devices whose property value is greater than or equal to the configured input in Assignment Filters.'
             name: greaterThanOrEquals
           - value: lessThan
             description: Indicates the devices whose property value is less than the configured input in Assignment Filters.
@@ -5427,6 +5535,19 @@ components:
         - powerOn
         - powerOff
         - moveRegion
+      type: string
+    microsoft.graph.cloudPcSnapshotType:
+      title: cloudPcSnapshotType
+      enum:
+        - automatic
+        - manual
+        - unknownFutureValue
+      type: string
+    microsoft.graph.cloudPcSnapshotStatus:
+      title: cloudPcSnapshotStatus
+      enum:
+        - ready
+        - unknownFutureValue
       type: string
     microsoft.graph.cloudPcConnectionSetting:
       title: cloudPcConnectionSetting
